--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "Seth Wheeler",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.1.1",
+    "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "nanoid": "^3.1.15"
   }
